First stab at making an html for all 3 of us. So we can get started. A foundation if ya know what im sayin...!

--- a/index.html
+++ b/index.html
@@ -7,5 +7,98 @@
     <link rel="stylesheet" href="style.css" />
     <title>Code is clay project</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="" alt="" />
+      </div>
+      <nav>
+        <ul>
+          <li><a href="">About</a></li>
+          <li><a href="">Collection</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="home">
+        <div class="container"><h1 class="slogan">slogan of slogans</h1></div>
+      </section>
+
+      <section class="about">
+        <div class="container">
+          <div class="left"></div>
+          <div class="right">
+            <h2 class="subtitle">About</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              veniam commodi tempore atque deleniti non exercitationem a quae
+              iste rerum?
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="collection">
+        <div class="container">
+          <div class="left">
+            <div class="image">
+              <img src="" alt="" />
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+
+            <div class="image">
+              <img src="" alt="" />
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+
+            <div class="image">
+              <img src="" alt="" />
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+          </div>
+          <div class="right">
+            <h2 class="subtitle">Collection</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              veniam commodi tempore atque deleniti non exercitationem a quae
+              iste rerum?
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="contact">
+        <div class="left">
+          <form>
+<label for="name">Name</label>
+<input type="text" id="name" name="name">
+
+<label for="email">Name</label>
+<input type="email" id="email" name="email" >
+
+<label for="message">Message</label>
+<textarea id="message" name="message">
+
+  <button>Submit</button>
+
+        </form>
+      </div>
+        <div class="right">
+          <h2 class="subtitle">Contact</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+            veniam commodi tempore atque deleniti non exercitationem a quae iste
+            rerum?
+          </p>
+        </div>
+      </section>
+    </main>
+
+    <footer><div class="icons"></div>
+    <div class="contact-info">
+      <p>Name</p>
+      <p>Adress</p>
+      <p>Tlf</p>
+    </div>
+  </footer>
+  </body>
 </html>
