--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
   <body>
     <header>
       <div class="logo">
-        <img src="" alt="" />
+        <img src="" alt="logo" />
       </div>
       <nav>
         <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Collection</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#collection">Collection</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section class="home">
+      <section id="home" class="home">
         <div class="container"><h1 class="slogan">slogan of slogans</h1></div>
       </section>
-
-      <section class="about">
+      <section id="about" class="about">
         <div class="container">
           <div class="left"></div>
           <div class="right">
@@ -38,21 +37,21 @@
           </div>
         </div>
       </section>
-      <section class="collection">
+      <section id="collection" class="collection">
         <div class="container">
           <div class="left">
             <div class="image">
-              <img src="" alt="" />
+              <img src="" alt="img1" />
               <p>Lorem ipsum dolor sit amet</p>
             </div>
 
             <div class="image">
-              <img src="" alt="" />
+              <img src="" alt="img2" />
               <p>Lorem ipsum dolor sit amet</p>
             </div>
 
             <div class="image">
-              <img src="" alt="" />
+              <img src="" alt="img3" />
               <p>Lorem ipsum dolor sit amet</p>
             </div>
           </div>
@@ -66,39 +65,37 @@
           </div>
         </div>
       </section>
-      <section class="contact">
-        <div class="left">
-          <form>
-<label for="name">Name</label>
-<input type="text" id="name" name="name">
-
-<label for="email">Name</label>
-<input type="email" id="email" name="email" >
-
-<label for="message">Message</label>
-<textarea id="message" name="message">
-
-  <button>Submit</button>
-
-        </form>
-      </div>
-        <div class="right">
-          <h2 class="subtitle">Contact</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-            veniam commodi tempore atque deleniti non exercitationem a quae iste
-            rerum?
-          </p>
+      <section id="contact" class="contact">
+        <div class="container">
+          <div class="left">
+            <form action="" method="post">
+              <label for="name">Name</label>
+              <input type="text" id="name" name="name" />
+              <label for="email">Name</label>
+              <input type="email" id="email" name="email" />
+              <label for="message">Message</label>
+              <textarea id="message" name="message"></textarea>
+              <button>Submit</button>
+            </form>
+          </div>
+          <div class="right">
+            <h2 class="subtitle">Contact</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              veniam commodi tempore atque deleniti non exercitationem a quae
+              iste rerum?
+            </p>
+          </div>
         </div>
       </section>
     </main>
-
-    <footer><div class="icons"></div>
-    <div class="contact-info">
-      <p>Name</p>
-      <p>Adress</p>
-      <p>Tlf</p>
-    </div>
-  </footer>
+    <footer>
+      <div class="icons"></div>
+      <div class="contact-info">
+        <p>Name</p>
+        <p>Adress</p>
+        <p>Tlf</p>
+      </div>
+    </footer>
   </body>
 </html>
