--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="" alt="logo" />
+        <img src="./img/testimage/earl-wilcox-gtBoWrb6pO0-unsplash.jpg" alt="logo" />
       </div>
       <nav>
         <ul>
