--- a/index.html
+++ b/index.html
@@ -8,94 +8,99 @@
     <title>Code is clay project</title>
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <img src="./img/testimage/earl-wilcox-gtBoWrb6pO0-unsplash.jpg" alt="logo" />
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#collection">Collection</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section id="home" class="home">
-        <div class="container"><h1 class="slogan">slogan of slogans</h1></div>
-      </section>
-      <section id="about" class="about">
-        <div class="container">
-          <div class="left"></div>
-          <div class="right">
-            <h2 class="subtitle">About</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-              veniam commodi tempore atque deleniti non exercitationem a quae
-              iste rerum?
-            </p>
-          </div>
+    <div class="grid-container">
+      <header>
+        <div class="logo">
+          <img
+            src="./img/testimage/earl-wilcox-gtBoWrb6pO0-unsplash.jpg"
+            alt="logo"
+          />
         </div>
-      </section>
-      <section id="collection" class="collection">
-        <div class="container">
-          <div class="left">
-            <div class="image">
-              <img src="" alt="img1" />
-              <p>Lorem ipsum dolor sit amet</p>
+        <nav>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#collection">Collection</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <section id="home" class="home">
+          <div class="container"><h1 class="slogan">slogan of slogans</h1></div>
+        </section>
+        <section id="about" class="about">
+          <div class="container">
+            <div class="left"></div>
+            <div class="right">
+              <h2 class="subtitle">About</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Adipisci veniam commodi tempore atque deleniti non
+                exercitationem a quae iste rerum?
+              </p>
             </div>
+          </div>
+        </section>
+        <section id="collection" class="collection">
+          <div class="container">
+            <div class="left">
+              <div class="image">
+                <img src="" alt="img1" />
+                <p>Lorem ipsum dolor sit amet</p>
+              </div>
 
-            <div class="image">
-              <img src="" alt="img2" />
-              <p>Lorem ipsum dolor sit amet</p>
-            </div>
+              <div class="image">
+                <img src="" alt="img2" />
+                <p>Lorem ipsum dolor sit amet</p>
+              </div>
 
-            <div class="image">
-              <img src="" alt="img3" />
-              <p>Lorem ipsum dolor sit amet</p>
+              <div class="image">
+                <img src="" alt="img3" />
+                <p>Lorem ipsum dolor sit amet</p>
+              </div>
+            </div>
+            <div class="right">
+              <h2 class="subtitle">Collection</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Adipisci veniam commodi tempore atque deleniti non
+                exercitationem a quae iste rerum?
+              </p>
             </div>
           </div>
-          <div class="right">
-            <h2 class="subtitle">Collection</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-              veniam commodi tempore atque deleniti non exercitationem a quae
-              iste rerum?
-            </p>
+        </section>
+        <section id="contact" class="contact">
+          <div class="container">
+            <div class="left">
+              <form action="" method="post">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" />
+                <label for="email">Name</label>
+                <input type="email" id="email" name="email" />
+                <label for="message">Message</label>
+                <textarea id="message" name="message"></textarea>
+                <button>Submit</button>
+              </form>
+            </div>
+            <div class="right">
+              <h2 class="subtitle">Contact</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Adipisci veniam commodi tempore atque deleniti non
+                exercitationem a quae iste rerum?
+              </p>
+            </div>
           </div>
+        </section>
+      </main>
+      <footer>
+        <div class="icons"></div>
+        <div class="contact-info">
+          <p>Name</p>
+          <p>Adress</p>
+          <p>Tlf</p>
         </div>
-      </section>
-      <section id="contact" class="contact">
-        <div class="container">
-          <div class="left">
-            <form action="" method="post">
-              <label for="name">Name</label>
-              <input type="text" id="name" name="name" />
-              <label for="email">Name</label>
-              <input type="email" id="email" name="email" />
-              <label for="message">Message</label>
-              <textarea id="message" name="message"></textarea>
-              <button>Submit</button>
-            </form>
-          </div>
-          <div class="right">
-            <h2 class="subtitle">Contact</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-              veniam commodi tempore atque deleniti non exercitationem a quae
-              iste rerum?
-            </p>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <div class="icons"></div>
-      <div class="contact-info">
-        <p>Name</p>
-        <p>Adress</p>
-        <p>Tlf</p>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
