the footer from Mads

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/8a0f478631.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Code is clay project</title>
   </head>
   <body>
@@ -94,11 +98,16 @@
         </section>
       </main>
       <footer>
-        <div class="icons"></div>
         <div class="contact-info">
-          <p>Name</p>
-          <p>Adress</p>
-          <p>Tlf</p>
+          <p>Codey's Clay</p>
+          <p>N. Claystreeet 25</p>
+          <p>Burbank CA.</p>
+          <p>Tlf:5454545455</p>
+        </div>
+        <div class="icons">
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href=""><i class="fa-solid fa-envelope"></i></a>
         </div>
       </footer>
     </div>
