--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Adipisci veniam commodi tempore atque deleniti non
-                exercitationem a quae iste rerum?
+                exercitationem a quae iste rerum?dsfkn
               </p>
             </div>
           </div>
         </section>
         <section id="collection" class="collection">
-          <div class="container">
+          <div class="cgit ontainer">
             <div class="left">
               <div class="image">
                 <img src="" alt="img1" />
