--- a/index.html
+++ b/index.html
@@ -32,19 +32,22 @@
         <section id="home" class="home">
           <div class="container"><h1 class="slogan">slogan of slogans</h1></div>
         </section>
+
         <section id="about" class="about">
-          <div class="container">
-            <div class="left"></div>
+          <div class="about-container">
             <div class="right">
               <h2 class="subtitle">About</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Adipisci veniam commodi tempore atque deleniti non
-                exercitationem a quae iste rerum?dsfkn
+                Codey Corso fom Los Angeles makes unique handmade ceramics. Each
+                piece is completely unique and painted individually.
               </p>
+            </div>
+            <div class="left">
+              <img src="./img/testimage/IMG_0074.jpg" alt="codey" />
             </div>
           </div>
         </section>
+
         <section id="collection" class="collection">
           <div class="cgit ontainer">
             <div class="left">
