--- a/index.html
+++ b/index.html
@@ -74,23 +74,21 @@
           </div>
         </section>
         <section id="contact" class="contact">
-          <div class="container">
+          <div class="container-contact">
             <div class="right">
               <h2 class="subtitle">Contact</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Adipisci veniam commodi tempore atque deleniti non
-                exercitationem a quae iste rerum?
+                Got a message for Codey? Reach out here.
               </p>
             </div>
             <div class="left">
               <form action="" method="post">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" />
-                <label for="email">Name</label>
-                <input type="email" id="email" name="email" />
-                <label for="message">Message</label>
-                <textarea id="message" name="message"></textarea>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" placeholder:  /><br><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" /><br><br>
+                <label for="message">Message</label><br>
+                <textarea rows="4" id="message" name="message"></textarea><br>
                 <button>Submit</button>
               </form>
             </div>
