Fix header styling in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
   <body>
     <div class="grid-container">
       <header>
-        <div class="logo">
-          <img
+          <img class="logo"
             src="./img/testimage/earl-wilcox-gtBoWrb6pO0-unsplash.jpg"
             alt="logo"
           />
-        </div>
         <nav>
           <ul>
             <li><a href="#about">About</a></li>
