--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
 
         <section id="about" class="about">
-          <div class="about-container">
+          <div class="container">
             <div class="right">
               <h2 class="subtitle">About</h2>
               <p>
