--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <header id="header" class="primary-navigation">
         <nav>
           <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#collection">Collection</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about" class="btn">About</a></li>
+            <li><a href="#collection" class="btn">Collection</a></li>
+            <li><a href="#contact" class="btn">Contact</a></li>
           </ul>
         </nav>
       </header>
