Correct layout of mobile and media querys

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <div class="left">
               <div class="gallery">
                 <div class="card">
-                <img src="./img/actualimages/IMG-8384.jpg" alt="img1" />
-                <p>Lorem ipsum dolor sit amet</p>
-              </div>
+                  <img src="./img/actualimages/IMG-8384.jpg" alt="img1" />
+                  <p>Lorem ipsum dolor sit amet</p>
+                </div>
 
               <div class="card">
                 <img src="./img/actualimages/IMG-8393.jpg" alt="img2" />
@@ -88,8 +88,7 @@
           <div class="container">
             <div class="right">
               <h2 class="subtitle">Contact</h2>
-              <p>
-                Got a message for Codey? Reach out here.
+              <p>Got a message for Codey? Reach out here.
               </p>
             </div>
             <div class="left">
