--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Splash&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet"> 
 
       
     <script
@@ -103,11 +104,11 @@
             <div class="left">
               <form action="" method="post">
                 <div class="form-entry">
-                  <label for="name">Name:</label>
+                  <label for="name">Name</label>
                   <input type="text" id="name" name="name" />
                 </div>
                 <div class="form-entry">
-                  <label for="email">Email:</label>
+                  <label for="email">Email</label>
                   <input type="email" id="email" name="email" />
                 </div>
                 <div class="form-entry">
