DEbug mobile, tablet and desktop version

--- a/index.html
+++ b/index.html
@@ -45,9 +45,14 @@
       <main>
         <section id="home">
           <div class="container">
-            <h1 class="slogan">slogan of slogans</h1>
+            <div class="right">
+            <h1 class="slogan">Codey's unique ceramics</h1>
+          </div>
+          <div class="left">
             <img src="./img/actualimages/Imagesused/Desptopillustration.png" alt="illustration">
           </div>
+          </div>
+      
         </section>
 
         <section id="about">
@@ -116,7 +121,7 @@
                   <label for="message">Message</label>
                   <textarea id="message" name="message"></textarea>
                 </div>
-                <button>Submit</button>
+                <button class="btn">Submit</button>
               </form>
             </div>
           </div>
