--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
       <main>
         <section id="home">
           <div class="container">
-            <div class="right">
-            <h1 class="slogan">Codey's unique ceramics</h1>
-          </div>
-          <div class="left">
+            <div class="main-image-container">
             <img src="./img/actualimages/Imagesused/Desptopillustration.png" alt="illustration">
           </div>
+     <!--    <div class="right">
+          <h1 class="slogan">Codey's unique ceramics</h1>
+          </div> --> 
+         <!--  <div class="left">
+            
+          </div> -->
           </div>
       
         </section>
