--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
   <body>
     <div class="grid-container">
       <div class="logo-container">
-        <a href="#header"
+        <a class="logo-link" href="#header"
+          ><img
+            class="logo"
+            src="./img/actualimages/Imagesused/Logobutton.png"
+            alt="logo"
+        /></a>
+        <a class="logo-desktop" href="#"
           ><img
             class="logo"
             src="./img/actualimages/Imagesused/Logobutton.png"
