--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
 
       <main>
         <section id="home">
-          <div class="container">
-            <div class="right">
-            <h1 class="slogan">Codey's unique ceramics</h1>
-          </div>
-          <div class="left">
-            <img src="./img/actualimages/Imagesused/Desptopillustration.png" alt="illustration">
-          </div>
+          <div class="container container-home">
+            <!-- <div class="right"> -->
+            <!-- <h1 class="slogan">Codey's unique ceramics</h1> -->
+          <!-- </div> -->
+          <div class="container--narrow">
+            <img class="main-img" src="./img/actualimages/Imagesused/Desptopillustration.png" alt="illustration">
+          <!-- </div> -->
+        </div>
           </div>
       
         </section>
