final version of logo

--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
   <body>
     <div class="grid-container">
       <div class="logo-container">
-        <a href="#header"
+        <a class="logo-link" href="#header"
           ><img
             class="logo"
             src="./img/actualimages/Imagesused/Logobutton.png"
             alt="logo"
         /></a>
+        <!--Second logo for teh desktop-->
+        <a class="logo-desktop" href="#">
+          <img class="logo" src="./img/actualimages/Imagesused/Logobutton.png" alt="logo"/>
+        </a>
       </div>
 
       <header id="header" class="primary-navigation">
